# ymsquic

./: CMakeLists.txt  README.md
docs/: BUILD.md
scripts/: build.sh
src/core/: CMakeLists.txt  ack_tracker.c  ack_tracker.h  api.c  api.h  binding.c  binding.h  cid.h  configuration.c  configuration.h  congestion_control.c  congestion_control.h  connection.c  connection.h  crypto.c  crypto_tls.c  datagram.c  frame.c  frame.h  inline.c  library.c  library.h  listener.c  listener.h  lookup.c  lookup.h  loss_detection.c  loss_detection.h  mtu_discovery.c  operation.c  operation.h  packet.c  packet.h  packet_builder.c  packet_builder.h  packet_space.c  packet_space.h  path.c  path.h  precomp.h  (+27 more)
src/core/unittest/: CMakeLists.txt  FrameTest.cpp  PartitionTest.cpp  SpinFrame.cpp  TicketTest.cpp  TransportParamTest.cpp  VarIntTest.cpp
src/inc/: CMakeLists.txt  msquic.h  msquic.ver  msquic_linux.h  msquic_winkernel.h  msquic_winuser.h  msquichelper.h  msquicp.h  quic_crypt.h  quic_datapath.h  quic_driver_helpers.h  quic_hashtable.h  quic_platform.h  quic_platform_dispatch.h  quic_platform_linux.h  quic_platform_winkernel.h  quic_sal_stub.h  quic_tls.h  quic_toeplitz.h  quic_trace.h  quic_trace_manifested_etw.h  quic_versions.h
src/perf/lib/: HpsClient.cpp  PerfHelpers.h  PerfServer.cpp  PerfServer.h  RpsClient.cpp  ThroughputClient.cpp  (+1 more)
src/platform/: CMakeLists.txt  cert_capi.c  cert_openssl.c  cert_stub.c  datapath_linux.c  datapath_winkernel.c  datapath_winuser.c  hashtable.c  inline.c  pcp.c  platform_internal.h  platform_linux.c  platform_winkernel.c  platform_winuser.c  selfsign_capi.c  selfsign_openssl.c  selfsign_stub.c  storage_winuser.c  tls_mitls.c  tls_openssl.c  tls_schannel.c  tls_stub.c  toeplitz.c
src/platform/unittest/: CMakeLists.txt  DataPathTest.cpp  TlsTest.cpp
src/tools/: CMakeLists.txt
(+30 files in other folders)
